# clipboard

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs  ui.rs
src/backend/: mod.rs  wayland.rs  x11.rs
src/ipc/: mod.rs
src/store/: mod.rs
