[package]
name = "clipboard"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Clipboard Contributors"]
description = "Win+V style clipboard history for Linux (multi-DE)"
repository = "https://github.com/0nsec/clipboard"

[features]
default = ["ui"]
ui = ["gtk4"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Optional UI
gtk4 = { version = "0.9", package = "gtk4", optional = true, features = ["v4_10"] }
glib = { version = "0.19", features = ["v2_74"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
serde_json = "1"
